--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "bower": "1.7.9",
     "express": "^4.13.4",
     "http-proxy": "^1.13.2"
   },
@@ -41,6 +42,5 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
