--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "body-parser": "^1.15.0",
     "bower": "1.7.9",
     "express": "^4.13.4",
-    "http-proxy": "^1.13.2"
+    "http-proxy": "^1.13.2",
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "~0.4.0",
     "grunt-bower-install": "~1.0.0",
