--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.0.0",
   "dependencies": {
     "body-parser": "^1.15.0",
-    "bower": "1.7.9",
+    "bower": "^1.7.9",
     "express": "^4.13.4",
-    "http-proxy": "^1.13.2",
-    "grunt": "~0.4.1",
+    "grunt": "^0.4.5",
+    "grunt-angular-templates": "~0.5.5",
     "grunt-autoprefixer": "~0.4.0",
     "grunt-bower-install": "~1.0.0",
     "grunt-concurrent": "~0.5.0",
+    "grunt-contrib": "*",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-less": "^0.11.3",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
@@ -19,34 +19,33 @@
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-imagemin": "~0.3.0",
     "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-less": "^0.11.3",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.2",
     "grunt-google-cdn": "~0.2.0",
+    "grunt-karma": "~0.12.0",
     "grunt-newer": "~0.6.1",
     "grunt-ngmin": "~0.0.2",
+    "grunt-processhtml": "~0.3.3",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~2.0.0",
+    "http-proxy": "^1.13.2",
     "jshint-stylish": "~0.1.3",
-    "load-grunt-tasks": "~0.4.0",
-    "time-grunt": "~0.2.1",
     "karma-ng-html2js-preprocessor": "~0.2.1",
     "karma-ng-scenario": "~0.1.0",
-    "grunt-karma": "~0.12.0",
-    "grunt-angular-templates": "~0.5.5",
-    "grunt-processhtml": "~0.3.3",
-    "grunt-contrib": "*",
-    "less": "*"
+    "less": "*",
+    "load-grunt-tasks": "~0.4.0",
+    "time-grunt": "~0.2.1"
   },
-  "devDependencies": {
-
-  },
+  "devDependencies": {},
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "postinstall": "bash ./post_install.sh"
+    "preinstall" : "npm install --save bower grunt",
+    "start": "node index.js",
+    "postinstall": "bower install && grunt"
   }
 }
