--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "grunt": "0.4.5",
     "grunt-cli": "1.2.0",
     "http-proxy": "^1.13.2",
-    "nodemailer": "latest"
+    "nodemailer": "latest",
       "express-jwt": "~0.2.1",
     "jsonwebtoken": "~0.4.0"
   },
