--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "body-parser": "^1.15.0",
     "bower": "1.7.9",
     "express": "^4.13.4",
+    "express-jwt": "~0.2.1",
     "grunt": "0.4.5",
     "grunt-cli": "1.2.0",
     "http-proxy": "^1.13.2",
-    "nodemailer": "latest",
-      "express-jwt": "~0.2.1",
-    "jsonwebtoken": "~0.4.0"
+    "jsonwebtoken": "~0.4.0",
+    "nodemailer": "latest"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
