--- a/package.json
+++ b/package.json
@@ -10,38 +10,36 @@
     "grunt-cli": "1.2.0",
     "http-proxy": "^1.13.2",
     "jsonwebtoken": "~0.4.0",
-    "nodemailer": "latest"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-autoprefixer": "~0.4.0",
-    "grunt-bower-install": "~1.0.0",
-    "grunt-concurrent": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-less": "^0.11.3",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-imagemin": "~0.3.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-watch": "~0.5.2",
-    "grunt-google-cdn": "~0.2.0",
-    "grunt-newer": "~0.6.1",
-    "grunt-ngmin": "~0.0.2",
-    "grunt-rev": "~0.1.0",
-    "grunt-svgmin": "~0.2.0",
-    "grunt-usemin": "~2.0.0",
-    "jshint-stylish": "~0.1.3",
-    "load-grunt-tasks": "~0.4.0",
-    "time-grunt": "~0.2.1",
-    "karma-ng-html2js-preprocessor": "~0.2.1",
-    "karma-ng-scenario": "~0.1.0",
-    "grunt-karma": "~0.12.0",
-    "grunt-angular-templates": "~0.5.5",
-    "grunt-processhtml": "~0.3.3"
+    "nodemailer": "latest",
+    "grunt": "latest",
+    "grunt-autoprefixer": "latest",
+    "grunt-bower-install": "latest",
+    "grunt-concurrent": "latest",
+    "grunt-contrib-clean": "latest",
+    "grunt-contrib-less": "latest",
+    "grunt-contrib-concat": "latest",
+    "grunt-contrib-connect": "latest",
+    "grunt-contrib-copy": "latest",
+    "grunt-contrib-cssmin": "latest",
+    "grunt-contrib-htmlmin": "latest",
+    "grunt-contrib-imagemin": "latest",
+    "grunt-contrib-jshint": "latest",
+    "grunt-contrib-uglify": "latest",
+    "grunt-contrib-watch": "latest",
+    "grunt-google-cdn": "latest",
+    "grunt-newer": "latest",
+    "grunt-ngmin": "latest",
+    "grunt-rev": "latest",
+    "grunt-svgmin": "latest",
+    "grunt-usemin": "latest",
+    "jshint-stylish": "latest",
+    "load-grunt-tasks": "latest",
+    "time-grunt": "latest",
+    "karma-ng-html2js-preprocessor": "latest",
+    "karma-ng-scenario": "latest"
+    "grunt-karma": "latest",
+    "grunt-angular-templates": "latest",
+    "grunt-processhtml": "latest"
   },
   "engines": {
     "node": ">=0.10.0"
