--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,6 @@
 node_modules
-!/node_modules
-/node_modules/*
-!/node_modules/load-grunt-tasks/
-!/node_modules/grunt-bower-install/
-!/node_modules/grunt-concurrent/
-!/node_modules/grunt-contrib-clean/
-!/node_modules/grunt-contrib-less/
-!/node_modules/grunt-contrib-concat/
-!/node_modules/grunt-contrib-connect/
-!/node_modules/grunt-contrib-copy/
-!/node_modules/grunt-contrib-cssmin/
-!/node_modules/grunt-contrib-htmlmin/
-!/node_modules/grunt-contrib-imagemin/
-!/node_modules/grunt-contrib-jshint/
-!/node_modules/grunt-contrib-uglify/
-!/node_modules/grunt-contrib-watch/
-!/node_modules/grunt-google-cdn/
-!/node_modules/grunt-newer/
-!/node_modules/grunt-ngwin/
-!/node_modules/grunt-rev/
-!/node_modules/grunt-svgmin/
-!/node_modules/grunt-usemin/
-!/node_modules/grunt-karma/
-!/node_modules/grunt-angular-templates/
-!/node_modules/grunt-processhtml/
-!/node_modules/time-grunt/
-!/node_modules/grunt-ngmin/
-!/node_modules/grunt-karma/
-!/node_modules/time-grunt/
-!/node_modules/karma/
-!/node_modules/jshint-stylish/
 
-
-
+/node_modules/
 
 dist
 .tmp
