--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "body-parser": "^1.15.0",
     "bower": "1.7.9",
     "express": "^4.13.4",
-    "grunt": "0.4.5",
+    "grunt": "1.0.1",
     "grunt-cli": "1.2.0",
     "http-proxy": "^1.13.2",
     "nodemailer": "latest",
-      "express-jwt": "~0.2.1",
+    "express-jwt": "~0.2.1",
     "jsonwebtoken": "~0.4.0",
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "~0.4.0",
@@ -35,6 +35,7 @@
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.4.0",
     "time-grunt": "~0.2.1",
+    "karma":"latest",
     "karma-ng-html2js-preprocessor": "~0.2.1",
     "karma-ng-scenario": "~0.1.0",
     "grunt-karma": "~0.12.0",
