--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "postinstall": "grunt install && grunt build && grunt grunt bowerInstall"
   }
 }
