--- a/package.json
+++ b/package.json
@@ -47,6 +47,6 @@
   },
   "scripts": {
     "test": "grunt test",
-    "postinstall": "grunt install && grunt build && grunt grunt bowerInstall"
+    "postinstall": "grunt install && grunt build && grunt bowerInstall"
   }
 }
