--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular-chartist.js": "~3.3.6",
     "angular-cookies": "~1.3.10",
     "angular-meditor": "1.4.1",
+    "angular-nanoscroller": "~0.2.1",
     "angular-resource": "~1.3.10",
     "angular-route": "~1.3.10",
     "angular-sanitize": "~1.3.10",
