--- a/package.json
+++ b/package.json
@@ -5,18 +5,14 @@
     "body-parser": "^1.15.0",
     "bower": "1.7.9",
     "express": "^4.13.4",
-    "grunt": "1.0.1",
-    "grunt-cli": "1.2.0",
-    "http-proxy": "^1.13.2",
-    "nodemailer": "latest",
     "express-jwt": "~0.2.1",
-    "jsonwebtoken": "~0.4.0",
     "grunt": "~0.4.5",
+    "grunt-angular-templates": "~0.5.5",
     "grunt-autoprefixer": "~0.4.0",
     "grunt-bower-install": "~1.0.0",
+    "grunt-cli": "1.2.0",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-less": "^0.11.3",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
@@ -24,27 +20,31 @@
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-imagemin": "~0.3.0",
     "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-less": "^0.11.3",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.2",
     "grunt-google-cdn": "~0.2.0",
+    "grunt-karma": "~0.12.0",
     "grunt-newer": "~0.6.1",
     "grunt-ngmin": "~0.0.2",
+    "grunt-processhtml": "~0.3.3",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~2.0.0",
+    "http-proxy": "^1.13.2",
     "jshint-stylish": "~0.1.3",
-    "load-grunt-tasks": "~0.4.0",
-    "time-grunt": "~0.2.1",
-    "karma":"latest",
+    "jsonwebtoken": "~0.4.0",
+    "jwt-simple": "^0.5.0",
+    "karma": "latest",
     "karma-ng-html2js-preprocessor": "~0.2.1",
     "karma-ng-scenario": "~0.1.0",
-    "grunt-karma": "~0.12.0",
-    "grunt-angular-templates": "~0.5.5",
-    "grunt-processhtml": "~0.3.3"
+    "load-grunt-tasks": "~0.4.0",
+    "nodemailer": "latest",
+    "time-grunt": "~0.2.1"
   },
   "engines": {
-    "node": ">=5.11.1"
-    ,"npm": ">=3.8.6"
+    "node": ">=5.11.1",
+    "npm": ">=3.8.6"
   },
   "scripts": {
     "test": "grunt test",
