--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "outline",
   "version": "1.0.0",
   "dependencies": {
-    "angular": "1.3.10",
+    "angular": "1.3.20",
     "angular-animate": "~1.3.10",
     "angular-bootstrap": "0.12.0",
     "angular-chartist.js": "~3.3.6",
@@ -60,7 +60,8 @@
     "themify-icons": "~0.1.0",
     "underscore": "~1.5.2",
     "velocity": "~1.2.2",
-    "weather-icons": "~1.3"
+    "weather-icons": "~1.3",
+    "ng-token-auth": "^0.0.29"
   },
   "resolutions": {
     "jquery": "~1.11.0",
