--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "outline",
   "version": "1.0.0",
   "dependencies": {
-    "angular": "1.5.8",
+    "angular": "~1.5.8",
     "angular-animate": "~1.3.10",
     "angular-bootstrap": "0.12.0",
     "angular-chartist.js": "~3.3.6",
@@ -65,7 +65,7 @@
   },
   "resolutions": {
     "jquery": "~1.11.0",
-    "angular": "1.3.10",
+    "angular": "~1.5.8",
     "d3": "~3.5.3"
   },
   "devDependencies": {
