--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "angular": "~1.5.8",
-    "angular-animate": "~1.5.9",
+    "angular-animate": "^1.5.8",
     "angular-bootstrap": "0.12.0",
     "angular-chartist.js": "~3.3.6",
     "angular-cookies": "~1.3.10",
