--- a/bower.json
+++ b/bower.json
@@ -61,7 +61,8 @@
     "underscore": "~1.5.2",
     "velocity": "~1.2.2",
     "weather-icons": "~1.3",
-    "ng-token-auth": "^0.0.29"
+    "ng-token-auth": "^0.0.29",
+    "angular-ui-bootstrap": "^2.0.1"
   },
   "resolutions": {
     "jquery": "~1.11.0",
