--- a/bower.json
+++ b/bower.json
@@ -62,7 +62,8 @@
     "velocity": "~1.2.2",
     "weather-icons": "~1.3",
     "ng-token-auth": "^0.0.29",
-    "angular-ui-bootstrap": "^2.0.1"
+    "angular-ui-bootstrap": "^2.0.1",
+    "angular-ui-router": "ui-router#^0.3.1"
   },
   "resolutions": {
     "jquery": "~1.11.0",
