--- a/bower.json
+++ b/bower.json
@@ -64,7 +64,8 @@
     "ng-token-auth": "^0.0.29",
     "angular-ui-bootstrap": "^2.0.1",
     "angular-ui-router": "ui-router#^0.3.1",
-    "angular-cookie": "^4.1.0"
+    "angular-cookie": "^4.1.0",
+    "angular-permission": "^4.0.3"
   },
   "resolutions": {
     "jquery": "~1.11.0",
